--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </style>
 </head>
 <body>
-<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>Yuseon's class website</b></span></h1>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>Class projects</b></span></h2>
+<h1 style="margin: 0.0px 0.0px 16.1px 0.0px; font: 24.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>Keemgyubeen's Website</b></span></h1>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>HeHeHe..</b></span></h2>
 <ol class="ol1">
   <li class="li3"><span class="s2"></span><span class="s1">Prompt A</span></li>
   <li class="li3"><span class="s2"></span><span class="s1">Prompt B</span></li>
