--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p5"><span class="s1"></span><br></p>
 <h4 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000"><span class="s1"><b>About this site</b></span></h4>
-<p class="p7"><span class="s1">Here's a little paragraph about this site, in a paragraph tag... This is just some sample code to help you get started. You'll notice the HTML page has all the basic parts. You can change the title and the h1 at the top to include your name. I also set up a few links... click on "Top 10" and you'll go to the start of a top 10 list... then there's a link back to this page. Can copy and paste any of these tags or delete them and replace with your own content.</span></p>
+<p class="p7"><span class="s1">규빈의 웹사이트입니다. 예전에 구글 계정으로 깃허브에 가입했었던 건지 어릴 적 별명으로 자동으로 도메인이 설정되어 있습니다 ....</span></p>
 <p class="p4"><span class="s3"><a href="https://docs.google.com/spreadsheets/d/1DyjJXmLFsHTh9excJnmvOR5ph1iRqF7i2yXGhty0ZrU/edit#gid=863505985">Visit Physical Workshop!</a></span></p>
 <p class="p7"><span class="s1">Technology is <b>truly</b> amazing!</span></p>
 <p class="p5"><span class="s1"></span><br></p>
