--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h4 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 12.0px Pretendard; -webkit-text-stroke: #000000"><span class="s1"><b>About this site</b></span></h4>
 <p class="p7"><span class="s1">규빈의 웹사이트입니다. 예전에 구글 계정으로 깃허브에 가입했었던 건지 어릴 적 별명으로 자동으로 도메인이 설정되어 있습니다 ....</span></p>
 <p class="p4"><span class="s3"><a href="https://docs.google.com/document/d/1wspdkqnyrsHZQGfl1FniLLVrrPQVhYiI_dVwLWBUASc/edit">Visit my PW1 Homepage</a></span></p>
-<p class="p7"><span class="s1">Technology is <b>truly</b> amazing!</span></p>
+<p class="p7"><span class="s1">이 페이지는 <b>프롬프트B를 위한</b>페이지예요</span></p>
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p5"><span class="s1"></span><br></p>
