--- a/exercises/song.html
+++ b/exercises/song.html
@@ -8,30 +8,10 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>Ghost</h1>
-    <div>Youngblood thinks there's always tomorrow<br>
-    I miss your touch on nights when I'm hollow<br>
-    I know you crossed a bridge that I can't follow<br>
-    Since the love that you left is all that I get<br>
-    I want you to know<br>
-    That if I can't be close to you<br>
-    I'll settle for the ghost of you<br>
-    I miss you more than life (more than life)<br>
-    And if you can't be next to me<br>
-    Your memory is ecstasy<br>
-    I miss you more than life<br>
-    I miss you more than life<br>
-    Youngblood thinks there's always tomorrow<br>
-    I need more time but time can't be borrowed<br>
-    I'd leave it all behind if I could follow<br>
-    Since the love that you left is all that I get<br>
-    I want you to know<br>
-    That if I can't be close to you<br>
-    I'll settle for the ghost of you<br>
-    I miss you more than life (yeah)<br>
-    And if you can't be next to me<br>
-    Your memory is ecstasy (oh)<br>
-    I miss you more than life<br>
+    <h1>Coffee&TV - Blur</h1>
+    <div>Do you feel like a chain store<br>
+    Pratically floored<br>
+    One of many zeroes<br>
     I miss you more than life</div>
   </body>
 </html>
