--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     li.li3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 11.0px Pretendard; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {-webkit-text-stroke: 0px #000000}
-    span.s3 {text-decoration: underline ; font-kerning: none}
+    span.s3 {text-decoration: overline underline ; font-kerning: none}
     span.s4 {font-kerning: none; color: #000000; -webkit-text-stroke: 0px #000000}
     ol.ol1 {list-style-type: decimal}
   </style>
