--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+  <title>KEEMGYUBEEN Physical Workshop(1) Prompt B</title>
+  <link rel= "stylesheet" href="style.css">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title></title>
@@ -26,7 +28,7 @@
   <li class="li3"><span class="s2"></span><span class="s1">Prompt B</span></li>
 </ol>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px Pretendard; -webkit-text-stroke: #000000"><span class="s1"><b>Exercises</b></span></h2>
-<p class="p4"><span class="s3"><a href="file:///Users/gyubeenkeem/Documents/GitHub/PW2024/exercises/song.html">Variations on a song</a></span><span class="s4"><span class="Apple-converted-space"> </span></span></p>
+<p class="p4"><span class="s3"><a href="exercises/song.html">Variations on a song</a></span><span class="s4"><span class="Apple-converted-space"> </span></span></p>
 <p class="p5"><span class="s1"></span><br></p>
 <p class="p5"><span class="s1"></span><br></p>
 <h4 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 12.0px Pretendard; -webkit-text-stroke: #000000"><span class="s1"><b>About this site</b></span></h4>
