--- a/무제 폴더/2.html
+++ b/무제 폴더/2.html
@@ -28,8 +28,8 @@
             
 
             <div class="grid-container">
-                <div class="item1">우리 홈페이지 정상영업중입니다</div>
-                <div class="item2">about<br>abstract&research<br>practice...<br>guestbook...</div>
+                <div class="item1">1</div>
+                <div class="item2">2</div>
                 <div class="item3"><div class="frame">
                     <p><b>PROMPT B</b></p><p>PHYSICAL WORKSHOP 1</p>
                     <p>김규빈<br>C235041</p><p><b></b>
