--- a/무제 폴더/index.html
+++ b/무제 폴더/index.html
@@ -26,7 +26,8 @@
         <th>About</th>
         <th> 
             <td align="center" onClick="location.href='abstract.html'" style="cursor:pointer;">Abstract&Research</th>
-        <th> Practice...</th>
+        <th>             <td align="center" onClick="location.href='https://docs.google.com/spreadsheets/d/e/2PACX-1vSA6QiTPArvdQ78TsOwxQSLlvAENRgYtI76FD3rmEdmbTs_CseF3NdjPmT1KBGL6ueGTYPw-XHKRkho/pubhtml'" style="cursor:pointer;">research</th>
+        
         <th> Guestbook...</th>
     </tr>
 
