--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
         </head>
     <body>
+        <header>
+            <div class="header_wrap">
+                <li><a href="#" target="_self">↑ 처음으로 돌아가기</a></li>
+            </div>
+        </header>
 
 
         <table bordercolor="blue" width="700" align="center" >
