--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     </titletexts>
 
-    <titletexts_bio> ddddd</titletexts_bio>
 <header>
+    
     
     <div class="header_wrap">
         <br>
@@ -32,6 +32,9 @@
     <a href="#" target="_self"><br><img src="/asset/moverung.gif" width="50" height="50"></img></a>
     </div>
 </header>
+<div class="titletexts_bio"> ddddd </div>
+
+
 
     <!-- <mytexts> -->
     <div class="frame archive">
