--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <titletexts>
         <div class="titletexts_wrap font-big">        </img>
-<b>Wandering and         <img src="/asset/moverung.gif" width="50" height="50"></img>
+<b>Wandering and       
     Wandering</b></div>
         <div class="titletexts_wrap">
     </div>
@@ -26,13 +26,13 @@
     <div class="header_wrap">
         <br>
             <p class="menu">about</p> <p class="menu">abstract&research</p><p class="menu">practice</p><p class="menu">guestbook</p>
-        <!-- <img src="/asset/moverung.gif" width="100" height="100"></img> -->
+        <!-- <img src="asset/moverung.gif" width="100" height="100"></img> -->
     </div>
     <div class="header_wrap_2">
-    <a href="#" target="_self"><br><img src="/asset/moverung.gif" width="50" height="50"></img></a>
+    <a href="#" target="_self"><br><img src="asset/moverung.gif" width="50" height="50"></img></a>
     </div>
 </header>
-<div class="titletexts_bio"> ddddd </div>
+<!-- <div class="titletexts_bio"> ddddd </div> -->
 
 
 
@@ -54,7 +54,7 @@
             그리고 시각화한 것을 설득하는 것이 중요.<br>
             스피드 있게 좁혀서 아웃풋 내기!!!!!
         </p>
-        <img src="/asset/moverung.gif" width="50" height="50"></img>
+        <img src="asset/moverung.gif" width="50" height="50"></img>
 
         <p>
             작업지시서를 작성하기 전의… 초초초안 (3.20)
@@ -73,7 +73,7 @@
             이 줄 왜 서 있는 거에요?<br>
             몰라요 …
         </p>
-        <img src="/asset/moverung.gif" width="100" height="100"></img>
+        <img src="asset/moverung.gif" width="100" height="100"></img>
 
         <p>
             아이돌 콘서트장이나 뮤지컬 공연장 등에 가면 흔히 볼 수 있는 풍경이다. 특별한 공연이 있는 날 사람들은 그날을 기념하기 위해 자신이 만든 굿즈를 기꺼이 사람들에게 나눔해준다. 공연장 로비의 한 쪽 구석에 나눔할 굿즈를 비치해 두고 커뮤니티에 비치한 위치를 알리는 게시글을 올리면 그 구역으로 사람들이 몰려들어 줄을 선다. 지나가던 사람들은 거기서 뭘 나눠주는지는 잘 모르겠지만 일단 다들 무언가를 받기 위해 줄을 서는 것 같으니까 뒤따라 줄을 선다.
